embedding and adding text

--- a/index.Rmd
+++ b/index.Rmd
@@ -170,7 +170,7 @@ Energy
 ---
 
 
-Chromagram
+Chromagrams
 =====================================
 
 Column {data-width=500}
@@ -183,39 +183,6 @@ Column {data-width=500}
 -------------------------------------
 
 ### Chromagram 1
-
-```{r}
-
-lost_in_yesterday <-
-  get_tidy_audio_analysis("5JWPUEov2wlX7c0jhYZpeB") |>
-  select(segments) |>
-  unnest(segments) |>
-  select(start, duration, pitches)
-
-
-chromagram_1 <- lost_in_yesterday |>
-  mutate(pitches = map(pitches, compmus_normalise, "euclidean")) |>
-  compmus_gather_chroma() |> 
-  ggplot(
-    aes(
-      x = start + duration / 2,
-      width = duration,
-      y = pitch_class,
-      fill = value
-    )
-  ) +
-  
-  geom_tile() +
-  ggtitle("Chromagram: Lost In Yesterday") +
-  scale_fill_gradientn(colors = my_palette) +
-  labs(x = "Time (s)", y = NULL, fill = "Magnitude") +
-  theme_minimal() + 
-  scale_color_gradientn(colors = my_palette)
-  ggplotly(chromagram_1, tooltip = "none", source = "none")
-  
-```
-
-### Chromagram 2 
 
 ```{r}
 
@@ -249,6 +216,40 @@ chromagram_2 <- the_bold_arrow_of_time |>
   
 ```
 
+### Chromagram 2 
+
+```{r}
+
+lost_in_yesterday <-
+  get_tidy_audio_analysis("5JWPUEov2wlX7c0jhYZpeB") |>
+  select(segments) |>
+  unnest(segments) |>
+  select(start, duration, pitches)
+
+
+chromagram_1 <- lost_in_yesterday |>
+  mutate(pitches = map(pitches, compmus_normalise, "euclidean")) |>
+  compmus_gather_chroma() |> 
+  ggplot(
+    aes(
+      x = start + duration / 2,
+      width = duration,
+      y = pitch_class,
+      fill = value
+    )
+  ) +
+  
+  geom_tile() +
+  ggtitle("Chromagram: Lost In Yesterday") +
+  scale_fill_gradientn(colors = my_palette) +
+  labs(x = "Time (s)", y = NULL, fill = "Magnitude") +
+  theme_minimal() + 
+  scale_color_gradientn(colors = my_palette)
+  ggplotly(chromagram_1, tooltip = "none", source = "none")
+  
+```
+
+
 Ceptrograms
 =====================================
 
@@ -256,6 +257,10 @@ Column {.tabset}
 -------------------------------------
 
 ### Ceptrogram 1
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6wcBZjhU4dk813FYE1hybg?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+
 ```{r}
 the_sun_ceptrogram <- readRDS(file = "data/the_sun_ceptrogram (Ceptrogram).RDS")
 
@@ -275,6 +280,9 @@ the_sun_ceptrogram |>
 ```
 
 ### Ceptrogram 2
+
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2gNfxysfBRfl9Lvi9T3v6R?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
 
 ```{r}
 disciples_ceptrogram <- readRDS(file = "data/disciples_ceptrogram (Ceptrogram).RDS")
@@ -300,7 +308,9 @@ Column {data-width=500}
 
 ### text 
 
-On the left we see two ceptrograms
+On the left we see two ceptrograms. Again, the first represents a number of for currents. The second number is one from currents themselves. Looking at the first one, the first thing that stands out is the yellow piece at the start of the number at timbre feature 2. This represents "brightness"; the high frequencies. This is logically explained by the high, squeaky sounds at the beginning of the song. At the same time, we see that timbre feature 1, which represents volume, is low and builds up slowly. This is also evident in the song. The high sudden tones reappear later and at the very end we see timbre feature 3 suddenly present. These indicate the "flatness." This can also be heard, the song ends in a kind of monotonous noise. 
+
+The second ceptrogram shows that the song starts almost right away at a high volume and then stays like that for the whole song, which is also true with when you listen to the song. Somewhere in the middle, timbre feature 4 suddenly lights up, indicating the difference from the beginning and end. after several listens, I heard what was meant by this: It's a very brief moment where all the instrumentation falls away and only a tick can be heard, after which an additional "layer" of instrumentation is added and the song continues; it's a bit of a tipping point in the song. 
 
 
 
