--- a/index.Rmd
+++ b/index.Rmd
@@ -257,9 +257,9 @@ Column {.tabset}
 -------------------------------------
 
 ### Ceptrogram 1
-
+```{=html}
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6wcBZjhU4dk813FYE1hybg?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
+```
 
 ```{r}
 the_sun_ceptrogram <- readRDS(file = "data/the_sun_ceptrogram (Ceptrogram).RDS")
@@ -281,7 +281,9 @@ the_sun_ceptrogram |>
 
 ### Ceptrogram 2
 
+```{=html}
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/2gNfxysfBRfl9Lvi9T3v6R?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+```
 
 
 ```{r}
